Сделан сервер с аутинетификаций и редактирвоанием профиля, данный комит сделан перед подключением двухфакторной актентиикиции

--- a/TODO
+++ b/TODO
@@ -5,11 +5,13 @@
 , инфа о пользователе+,+ подтверждение email отправка на почту   )
 #[] - добавить токен доступа для при входе и регистрации в систему ?! еще раз посмотреть реализацию в видео
 # нет работать будем с помощью сесии , токен возможно только для фронта сделать и все (хотя можно и в базу занести, но первым делом он смотрит на сесиию)
-[ ] - создать роуты для редактирвоания данных аккаунта (например, пароля)! (посмотрел какие функции реализованы)
+[+] - создать роуты для редактирвоания данных аккаунта (например, пароля)! (посмотрел какие функции реализованы)
 
     [+]- редактирвоание имени и почты
-    []- редактирвоание пароля
-    []- удаление аккаунта
+    [+]- редактирвоание пароля
+    [+]- удаление аккаунта
+
+[ ]-подключение двухфакторной аутентификации
 
 [+] - создать миграцию, модель и аконтролер для будущего апи учетных записей .
 [ ] - создать поля в миграции и связать с другими моделями( таблоицами)
