2fa работает (осталось решить вопрос с возратом данных при входе, например cfsc токен или api, что бы показывать маршуты или нет при успешной аутентификации)

--- a/TODO
+++ b/TODO
@@ -12,7 +12,8 @@
     [+]- удаление аккаунта
 
 [ ]-подключение двухфакторной аутентификации
-
+    [+] - при входе через fortify 
+    [] - понять как что возращается при входе через fortify 
 [+] - создать миграцию, модель и аконтролер для будущего апи учетных записей .
 [ ] - создать поля в миграции и связать с другими моделями( таблоицами)
 [ ] - посмотреть может добавить поля в модели для обязательного заполнения и т.д. 
