modified:   TODO 	modified:   TODO 	modified:   config/fortify.php 	modified:   config/session.php 	modified:   routes/auth.php

--- a/TODO
+++ b/TODO
@@ -12,7 +12,7 @@
     [+]- удаление аккаунта
 
 [ ]-подключение двухфакторной аутентификации
-    [+] - при входе через fortify 
+    [+] - при входе через fortify работает 2fa
     [] - понять как что возращается при входе через fortify 
 [+] - создать миграцию, модель и аконтролер для будущего апи учетных записей .
 [ ] - создать поля в миграции и связать с другими моделями( таблоицами)
