modified:   TODO 	modified:   config/fortify.php 	modified:   config/session.php 	modified:   routes/auth.php

--- a/TODO
+++ b/TODO
@@ -12,9 +12,9 @@
     [+]- удаление аккаунта
 
 [ ]-подключение двухфакторной аутентификации
-    [+] - при входе через fortify работает 2fa
-    [] - понять как что возращается при входе через fortify 
-[+] - создать миграцию, модель и аконтролер для будущего апи учетных записей .
+    [+] - при входе через fortify 2fa работает 
+    [] - понять как что возращается при входе через fortify, так как возращаются только коды без каких-либо данных
+[+] - создать миграцию, модель и аконтролер для будущего апи учетных записей.
 [ ] - создать поля в миграции и связать с другими моделями( таблоицами)
 [ ] - посмотреть может добавить поля в модели для обязательного заполнения и т.д. 
 [+] -удалить ненужные реквесты для учетных записей (account) в app/HTTP/..., так как валидация будет иди в запросах
