2FA работает, запросы с frontend отправляется:были проблемы со stateful. Токен csfr можно получать при загрзке старницы или корректное использование при первой отправке (см.фото в папке)

--- a/TODO
+++ b/TODO
@@ -13,7 +13,12 @@
 
 [ ]-подключение двухфакторной аутентификации
     [+] - при входе через fortify 2fa работает 
-    [] - понять как что возращается при входе через fortify, так как возращаются только коды без каких-либо данных
+    [-] - понять как что возращается при входе через fortify, так как возращаются только коды без каких-либо данных
+[+] - изучить странную ситуацию с вхожом на фронте и выходом (связано с миделвейром).  так входиться через fortify а выход чере санктум не работает 
+       !!! Решено: проблема была со sanctum, а именно со stateful, т.е. указать какой домен нужно использовать для отслеживания сесий
+       !!! Решено: при загрузке страницы входа, нужно отправить запрос на получение csfr-токена и дальше использовать его при первом запросе.
+                    или отправлять запрос внутри функции (смтр фото) + возможно влияет асинхронность (async, await) 
+[] - убрать префикс api                    
 [+] - создать миграцию, модель и аконтролер для будущего апи учетных записей.
 [ ] - создать поля в миграции и связать с другими моделями( таблоицами)
 [ ] - посмотреть может добавить поля в модели для обязательного заполнения и т.д. 
