теперь все роуты в файлы api, будут без префикса api

--- a/TODO
+++ b/TODO
@@ -18,7 +18,7 @@
        !!! Решено: проблема была со sanctum, а именно со stateful, т.е. указать какой домен нужно использовать для отслеживания сесий
        !!! Решено: при загрузке страницы входа, нужно отправить запрос на получение csfr-токена и дальше использовать его при первом запросе.
                     или отправлять запрос внутри функции (смтр фото) + возможно влияет асинхронность (async, await) 
-[] - убрать префикс api                    
+[+] - убрать префикс api  (находился в broadcast/app)                  
 [+] - создать миграцию, модель и аконтролер для будущего апи учетных записей.
 [ ] - создать поля в миграции и связать с другими моделями( таблоицами)
 [ ] - посмотреть может добавить поля в модели для обязательного заполнения и т.д. 
