Все основные функции работают корректно. Можно приступать к созданию функционала по обработке учетных данных пользователей.
	modified:   TODO
	modified:   config/auth.php

--- a/TODO
+++ b/TODO
@@ -11,9 +11,11 @@
     [+]- редактирвоание пароля
     [+]- удаление аккаунта
 
-[ ]-подключение двухфакторной аутентификации
+[+]-подключение двухфакторной аутентификации
     [+] - при входе через fortify 2fa работает 
-    [-] - понять как что возращается при входе через fortify, так как возращаются только коды без каких-либо данных
+    [+] - понять как что возращается при входе через fortify, так как возращаются только коды без каких-либо данных
+        !!!Решено: чтобы кастомизировать ответы, можно сделать свой кастомнобый бинд ответа от сервера. Сделал на примере выхода.
+                    Делать кастомизацию других используемых маршутов Fortify не вижу смысла, так как все нужные данные выводятся (коды, статусы и т.д.)
 [+] - изучить странную ситуацию с вхожом на фронте и выходом (связано с миделвейром).  так входиться через fortify а выход чере санктум не работает 
        !!! Решено: проблема была со sanctum, а именно со stateful, т.е. указать какой домен нужно использовать для отслеживания сесий
        !!! Решено: при загрузке страницы входа, нужно отправить запрос на получение csfr-токена и дальше использовать его при первом запросе.
@@ -28,3 +30,4 @@
 
 [ ] - разобраться в методах запросов ( согласно rest API ) 
 и ответов от сервера и если что подкорректировать их, например ответы на английском языке
+[] - разрешение куки в браузере для фронта
