--- a/TODO
+++ b/TODO
@@ -23,8 +23,10 @@
 [+] - убрать префикс api  (находился в broadcast/app)                  
 [+] - создать миграцию, модель и аконтролер для будущего апи учетных записей.
 [+] -удалить ненужные реквесты для учетных записей (account) в app/HTTP/..., так как валидация будет иди в запросах
-[ ] - создать поля в миграции и связать с другими моделями( таблоицами)
-[ ] - посмотреть может добавить поля в модели для обязательного заполнения и т.д. 
+[+] - создать поля в миграции и связать с другими моделями( таблоицами)
+[+] - посмотреть может добавить поля в модели для обязательного заполнения и т.д.
+       !!! Решено: таких полей нет. При условии что логин может быть уникальным,
+                  то это не сработает для всех пользователй, поэтому валидация должна проводиться при заполнени
 [ ] - нужно определить алгоритм, с помощью какого параметра в сесии можно увидеть каую-либо учетную запись
 [ ] - работа с учетными записями (!!! для конретного аутентифицированного пользователя)
     [] - добавление учетной записей
@@ -36,6 +38,6 @@
     [] - если мастер пароль (то его редактирвоание, и запрет на создание новых учетных записей если его нет) 
 
 
-[ ] - разобраться в методах запросов ( согласно rest API ) 
+[] - разобраться в методах запросов ( согласно rest API ) 
 и ответов от сервера и если что подкорректировать их, например ответы на английском языке
 [] - разрешение куки в браузере для фронта
