Изменена модель пользователя: добавлен мастер-пароль, при регистрации требуется мастер-пароль

--- a/TODO
+++ b/TODO
@@ -29,6 +29,9 @@
                   то это не сработает для всех пользователй, поэтому валидация должна проводиться при заполнени
 [ ] - нужно определить алгоритм, с помощью какого параметра в сесии можно увидеть каую-либо учетную запись
 [ ] - работа с учетными записями (!!! для конретного аутентифицированного пользователя)
+    [] - измение патерна регистрации с мастером пароля
+    [] - редактирвоание мастер пароля
+    [] - восстановление мастера пароля только при подтвержденной почте !!!!
     [] - добавление учетной записей
     [] - удаление учетной записей
     [] - редактирование учетной записей
@@ -37,7 +40,7 @@
     [] - подвердить с помощью выбранного алгоритма просмотра учетных записей
     [] - если мастер пароль (то его редактирвоание, и запрет на создание новых учетных записей если его нет) 
 
-
+[] - разобраться с требыванием к паролю ( например, требывать пароля с буквами, знаками как и для обычного так и для мастера) или чтобы не совпадал с дургими учетными данными
 [] - разобраться в методах запросов ( согласно rest API ) 
 и ответов от сервера и если что подкорректировать их, например ответы на английском языке
 [] - разрешение куки в браузере для фронта
