Добавлены заметки и создан контролер мастер пароля

--- a/TODO
+++ b/TODO
@@ -29,7 +29,7 @@
                   то это не сработает для всех пользователй, поэтому валидация должна проводиться при заполнени
 [ ] - нужно определить алгоритм, с помощью какого параметра в сесии можно увидеть каую-либо учетную запись
 [ ] - работа с учетными записями (!!! для конретного аутентифицированного пользователя)
-    [] - измение патерна регистрации с мастером пароля
+    [+] - измение патерна регистрации с мастером пароля
     [] - редактирвоание мастер пароля
     [] - восстановление мастера пароля только при подтвержденной почте !!!!
     [] - добавление учетной записей
@@ -39,6 +39,15 @@
     [] - просмотр всех учетных записей
     [] - подвердить с помощью выбранного алгоритма просмотра учетных записей
     [] - если мастер пароль (то его редактирвоание, и запрет на создание новых учетных записей если его нет) 
+
+!ВАЖНОЕ ПРИМЕЧАНИЕ: для того чтобы восстановить мастер пароль, нужна почта. Сейчас наколько я понимаю 
+можно менять без подтверждения, например кода подтверждения и т.д. То есть можно просто напросто взломать
+систему без подтверждения. Поэтому чтобы делать операции например с учетными записями, нужна подтвержденная почта.
+При этом если менять емеил то нужен код подтверждения, а если емил не подтвержден при изменении пароля, то не ребывать код.
+Если почта не подтверждена, то запрет на создание (?!и просмотр учетных записей будет недоступен)
+
+
+
 
 [] - разобраться с требыванием к паролю ( например, требывать пароля с буквами, знаками как и для обычного так и для мастера) или чтобы не совпадал с дургими учетными данными
 [] - разобраться в методах запросов ( согласно rest API ) 
