Изменена model User, теперь при регистрации пользователя отправляется письмо с подтверждением почты, также удалены поля для создания мастера пароля. он будет настраиться после подтверждения почты
	modified:   TODO

--- a/TODO
+++ b/TODO
@@ -27,9 +27,11 @@
 [+] - посмотреть может добавить поля в модели для обязательного заполнения и т.д.
        !!! Решено: таких полей нет. При условии что логин может быть уникальным,
                   то это не сработает для всех пользователй, поэтому валидация должна проводиться при заполнени
-[ ] - нужно определить алгоритм, с помощью какого параметра в сесии можно увидеть каую-либо учетную запись
+[+] - отправка на почту ссылку для подтверждения после регистрации
+[ ] - нужно определить и разработать алгоритм, с помощью какого параметра в сесии можно увидеть каую-либо учетную запись
 [ ] - работа с учетными записями (!!! для конретного аутентифицированного пользователя)
-    [+] - измение патерна регистрации с мастером пароля
+    # [+] - измение патерна регистрации с мастером пароля
+    [] - upd: разрешить создавать мастер пароль после регистарции и подверждения почты
     [] - редактирвоание мастер пароля
     [] - восстановление мастера пароля только при подтвержденной почте !!!!
     [] - добавление учетной записей
@@ -46,10 +48,16 @@
 При этом если менять емеил то нужен код подтверждения, а если емил не подтвержден при изменении пароля, то не ребывать код.
 Если почта не подтверждена, то запрет на создание (?!и просмотр учетных записей будет недоступен)
 
+   // валидация мастер пароля
+            'master_password'=>['required','confirmed','min:6','different:password'],
+        ] ,[
+            'master_password.different' => 'Мастер пароль должен отличаться от пароля для входа в аккаунт',
+        ]
 
-
-
+[]
 [] - разобраться с требыванием к паролю ( например, требывать пароля с буквами, знаками как и для обычного так и для мастера) или чтобы не совпадал с дургими учетными данными
 [] - разобраться в методах запросов ( согласно rest API ) 
 и ответов от сервера и если что подкорректировать их, например ответы на английском языке
+Для фронта:
+[] - разобраться с подтверждением почты почему какаято-ссылка ведет
 [] - разрешение куки в браузере для фронта
