--- a/TODO
+++ b/TODO
@@ -54,10 +54,11 @@
             'master_password.different' => 'Мастер пароль должен отличаться от пароля для входа в аккаунт',
         ]
 
-[]
+[] - разобраться с разметкой письма
 [] - разобраться с требыванием к паролю ( например, требывать пароля с буквами, знаками как и для обычного так и для мастера) или чтобы не совпадал с дургими учетными данными
 [] - разобраться в методах запросов ( согласно rest API ) 
 и ответов от сервера и если что подкорректировать их, например ответы на английском языке
+[] - разобраться с кодами ответов в контролерах (например созданный ресур и уже имещийся и т.д.)
 Для фронта:
 [] - разобраться с подтверждением почты почему какаято-ссылка ведет
 [] - разрешение куки в браузере для фронта
