Создал корректную отправку ссылки восстановления пароля в письме (в аппсервиспровайдере по аналогии с подтверждением), добавил тотрилинг на маргут + изменил шаблон письма при отправке+ изменил название роута для восстановления пароля (не для отправки ссылки)

--- a/TODO
+++ b/TODO
@@ -5,6 +5,8 @@
 , инфа о пользователе+,+ подтверждение email отправка на почту   )
 #[] - добавить токен доступа для при входе и регистрации в систему ?! еще раз посмотреть реализацию в видео
 # нет работать будем с помощью сесии , токен возможно только для фронта сделать и все (хотя можно и в базу занести, но первым делом он смотрит на сесиию)
+# параметры могут быть изменены и так как мы не записываем значение csfr токена на сервере а только на бэке, то при его модификации,
+# мы не сможем сказать правильный ли токен или нет и не сможем обработать миделвэёр на фронтенде.
 [+] - создать роуты для редактирвоания данных аккаунта (например, пароля)! (посмотрел какие функции реализованы)
 
     [+]- редактирвоание имени и почты
@@ -28,6 +30,8 @@
        !!! Решено: таких полей нет. При условии что логин может быть уникальным,
                   то это не сработает для всех пользователй, поэтому валидация должна проводиться при заполнени
 [+] - отправка на почту ссылку для подтверждения после регистрации
+[+] - подтверждение почты ( тест на фронте)
+[+] - восстановление пароля (тест на фронте)
 [ ] - нужно определить и разработать алгоритм, с помощью какого параметра в сесии можно увидеть каую-либо учетную запись
 [ ] - работа с учетными записями (!!! для конретного аутентифицированного пользователя)
     # [+] - измение патерна регистрации с мастером пароля
@@ -54,11 +58,11 @@
             'master_password.different' => 'Мастер пароль должен отличаться от пароля для входа в аккаунт',
         ]
 
-[] - разобраться с разметкой письма
+[+] - разобраться с разметкой письма (опубликовал вид письма в resource и испарвил разметку)
 [] - разобраться с требыванием к паролю ( например, требывать пароля с буквами, знаками как и для обычного так и для мастера) или чтобы не совпадал с дургими учетными данными
 [] - разобраться в методах запросов ( согласно rest API ) 
 и ответов от сервера и если что подкорректировать их, например ответы на английском языке
 [] - разобраться с кодами ответов в контролерах (например созданный ресур и уже имещийся и т.д.)
 Для фронта:
-[] - разобраться с подтверждением почты почему какаято-ссылка ведет
+[+] - разобраться с подтверждением почты почему какаято-ссылка ведет
 [] - разрешение куки в браузере для фронта
