Изменена концепция редактирвоания профиля (имя и почта отдельно). Добаил новый роут и функцию отвечабщей за редактирвоание имени.

--- a/TODO
+++ b/TODO
@@ -32,6 +32,9 @@
 [+] - отправка на почту ссылку для подтверждения после регистрации
 [+] - подтверждение почты ( тест на фронте)
 [+] - восстановление пароля (тест на фронте)
+[ ] - изменение данных данных пользователя
+    [+] - изменение имени 
+    [] - изменение почты ( с подтверждением старой и новой почты ) ( как сделать таблицу ?)
 [ ] - нужно определить и разработать алгоритм, с помощью какого параметра в сесии можно увидеть каую-либо учетную запись
 [ ] - работа с учетными записями (!!! для конретного аутентифицированного пользователя)
     # [+] - измение патерна регистрации с мастером пароля
