Создан контролер для изменения почты, если она не подтверждена. Исправил ошибку кодировки (решается с помощью включения бетта UTF-8), сама ошибка заключалась в неправильной интерполяции, хотя и работала. Добавил перевод ответов на русский.
	modified:   .gitignore
	modified:   TODO
	modified:   app/Http/Controllers/AccountController.php
	modified:   app/Http/Controllers/ProfileController.php
	modified:   app/Http/Responses/CustomLogoutResponseFortify.php
	modified:   app/Providers/AppServiceProvider.php
	modified:   composer.json
	modified:   composer.lock
	modified:   routes/api.php

--- a/TODO
+++ b/TODO
@@ -14,15 +14,15 @@
     [+]- удаление аккаунта
 
 [+]-подключение двухфакторной аутентификации
-    [+] - при входе через fortify 2fa работает 
+    [+] - при входе через fortify 2fa работает
     [+] - понять как что возращается при входе через fortify, так как возращаются только коды без каких-либо данных
         !!!Решено: чтобы кастомизировать ответы, можно сделать свой кастомнобый бинд ответа от сервера. Сделал на примере выхода.
                     Делать кастомизацию других используемых маршутов Fortify не вижу смысла, так как все нужные данные выводятся (коды, статусы и т.д.)
-[+] - изучить странную ситуацию с вхожом на фронте и выходом (связано с миделвейром).  так входиться через fortify а выход чере санктум не работает 
+[+] - изучить странную ситуацию с вхожом на фронте и выходом (связано с миделвейром).  так входиться через fortify а выход чере санктум не работает
        !!! Решено: проблема была со sanctum, а именно со stateful, т.е. указать какой домен нужно использовать для отслеживания сесий
        !!! Решено: при загрузке страницы входа, нужно отправить запрос на получение csfr-токена и дальше использовать его при первом запросе.
-                    или отправлять запрос внутри функции (смтр фото) + возможно влияет асинхронность (async, await) 
-[+] - убрать префикс api  (находился в broadcast/app)                  
+                    или отправлять запрос внутри функции (смтр фото) + возможно влияет асинхронность (async, await)
+[+] - убрать префикс api  (находился в broadcast/app)
 [+] - создать миграцию, модель и аконтролер для будущего апи учетных записей.
 [+] -удалить ненужные реквесты для учетных записей (account) в app/HTTP/..., так как валидация будет иди в запросах
 [+] - создать поля в миграции и связать с другими моделями( таблоицами)
@@ -33,8 +33,10 @@
 [+] - подтверждение почты ( тест на фронте)
 [+] - восстановление пароля (тест на фронте)
 [ ] - изменение данных данных пользователя
-    [+] - изменение имени 
-    [] - изменение почты ( с подтверждением старой и новой почты ) ( как сделать таблицу ?)
+    [+] - изменение имени
+    [+] - создатть таблицу для подтверждения кодов
+    [+] - изменение почты при условии если она не верефицированна
+
 [ ] - нужно определить и разработать алгоритм, с помощью какого параметра в сесии можно увидеть каую-либо учетную запись
 [ ] - работа с учетными записями (!!! для конретного аутентифицированного пользователя)
     # [+] - измение патерна регистрации с мастером пароля
@@ -44,12 +46,12 @@
     [] - добавление учетной записей
     [] - удаление учетной записей
     [] - редактирование учетной записей
-    [] - просмотр учетной записи 
+    [] - просмотр учетной записи
     [] - просмотр всех учетных записей
     [] - подвердить с помощью выбранного алгоритма просмотра учетных записей
-    [] - если мастер пароль (то его редактирвоание, и запрет на создание новых учетных записей если его нет) 
+    [] - если мастер пароль (то его редактирвоание, и запрет на создание новых учетных записей если его нет)
 
-!ВАЖНОЕ ПРИМЕЧАНИЕ: для того чтобы восстановить мастер пароль, нужна почта. Сейчас наколько я понимаю 
+!ВАЖНОЕ ПРИМЕЧАНИЕ: для того чтобы восстановить мастер пароль, нужна почта. Сейчас наколько я понимаю
 можно менять без подтверждения, например кода подтверждения и т.д. То есть можно просто напросто взломать
 систему без подтверждения. Поэтому чтобы делать операции например с учетными записями, нужна подтвержденная почта.
 При этом если менять емеил то нужен код подтверждения, а если емил не подтвержден при изменении пароля, то не ребывать код.
@@ -63,7 +65,7 @@
 
 [+] - разобраться с разметкой письма (опубликовал вид письма в resource и испарвил разметку)
 [] - разобраться с требыванием к паролю ( например, требывать пароля с буквами, знаками как и для обычного так и для мастера) или чтобы не совпадал с дургими учетными данными
-[] - разобраться в методах запросов ( согласно rest API ) 
+[] - разобраться в методах запросов ( согласно rest API )
 и ответов от сервера и если что подкорректировать их, например ответы на английском языке
 [] - разобраться с кодами ответов в контролерах (например созданный ресур и уже имещийся и т.д.)
 Для фронта:
