Создание роута и функции проверки введеных кодов ( функцию можно и реконструировать, для более детального вывода информации об ошибках чтобы пользователю было понятно , но имеет ли смысл ? если пользователь получает о невреных кодах и если они не найдены , то о том что он не отправлял или сессия закончилась , коды истечены). Немного поменял в таблице миграций порядок, создал автоматическую задачу на отслеживание кодов ( если ее включать, то можно пересмотреть порядок проверки кодов) Отредактирвоал проверку уникальности - оказывается искал поле в пользователях, но не казал какое. Добавил атрибуты в fillable и немного поправил шаблон.

--- a/TODO
+++ b/TODO
@@ -36,11 +36,12 @@
     [+] - изменение имени
     [+] - создатть таблицу для подтверждения кодов
     [+] - изменение почты при условии если она не верефицированна
-
+    [+] - отправка кодов на почту ( и на верифицированную и на старую)
+    [+] - првоерка кодов и подтверждение 
 [ ] - нужно определить и разработать алгоритм, с помощью какого параметра в сесии можно увидеть каую-либо учетную запись
 [ ] - работа с учетными записями (!!! для конретного аутентифицированного пользователя)
     # [+] - измение патерна регистрации с мастером пароля
-    [] - upd: разрешить создавать мастер пароль после регистарции и подверждения почты
+    [] - upd: создание матер пароля (разрешить создавать мастер пароль после регистарции и подверждения почты)
     [] - редактирвоание мастер пароля
     [] - восстановление мастера пароля только при подтвержденной почте !!!!
     [] - добавление учетной записей
