modified:   TODO 	modified:   app/Console/Commands/StatusCode.php 	modified:   app/Http/Controllers/Auth/NewPasswordController.php 	modified:   app/Http/Controllers/Auth/VerifyEmailController.php 	modified:   app/Http/Controllers/MasterPassController.php 	modified:   app/Http/Controllers/ProfileController.php 	new file:   app/Models/MasterPasswordToken.php 	modified:   app/Models/User.php 	modified:   app/Models/VerificationCode.php 	modified:   app/Notifications/NewEmailVerificationCode.php 	modified:   app/Notifications/OldEmailVerificationCode.php 	new file:   app/Notifications/ResetMasterPasswordNotification.php 	modified:   app/Providers/AppServiceProvider.php 	new file:   database/factories/MasterPasswordTokenFactory.php 	modified:   database/migrations/2024_04_06_151036_create_accounts_table.php 	modified:   database/migrations/2024_05_07_194944_create_verification_codes_table.php 	new file:   database/migrations/2024_05_16_131404_create_master_password_tokens_table.php 	modified:   routes/api.php 	modified:   routes/console.php

--- a/TODO
+++ b/TODO
@@ -31,19 +31,27 @@
                   то это не сработает для всех пользователй, поэтому валидация должна проводиться при заполнени
 [+] - отправка на почту ссылку для подтверждения после регистрации
 [+] - подтверждение почты ( тест на фронте)
+        [+] - добавление проверки ссылки на подтвердление (16.05 ) - т.е. добавлена проверка на параматер id ( пользователя) при подтверждении
 [+] - восстановление пароля (тест на фронте)
-[ ] - изменение данных данных пользователя
+[+] - изменение данных данных пользователя
     [+] - изменение имени
     [+] - создатть таблицу для подтверждения кодов
     [+] - изменение почты при условии если она не верефицированна
     [+] - отправка кодов на почту ( и на верифицированную и на старую)
-    [+] - првоерка кодов и подтверждение 
+          !!!  [] - возможно как то оптимизирвать отправку
+            ( например, если повторно отправлять, то перезаписывать коды и оставлять только activate или в дальнейем удалять если нет необходимости)
+           ! есть метод CreateOrUpdate
+    [+] - првоерка кодов и подтверждение
 [ ] - нужно определить и разработать алгоритм, с помощью какого параметра в сесии можно увидеть каую-либо учетную запись
 [ ] - работа с учетными записями (!!! для конретного аутентифицированного пользователя)
-    # [+] - измение патерна регистрации с мастером пароля
-    [] - upd: создание матер пароля (разрешить создавать мастер пароль после регистарции и подверждения почты)
-    [] - редактирвоание мастер пароля
-    [] - восстановление мастера пароля только при подтвержденной почте !!!!
+    # [+] - измение патерна регистрации с мастером пароля - неактуально
+    [+] - upd: создание матер пароля (разрешить создавать мастер пароль после регистарции и подверждения почты)
+    [+] - редактирвоание мастер пароля
+    [+] - восстановление мастера пароля только при подтвержденной почте !!!!
+        [+] - создать миграцию
+        [+] - создали модель
+        [+] - создать функцию генерации ссылки
+        [+] - создание функции проверки токена восстанволение пароля
     [] - добавление учетной записей
     [] - удаление учетной записей
     [] - редактирование учетной записей
@@ -52,18 +60,16 @@
     [] - подвердить с помощью выбранного алгоритма просмотра учетных записей
     [] - если мастер пароль (то его редактирвоание, и запрет на создание новых учетных записей если его нет)
 
+
 !ВАЖНОЕ ПРИМЕЧАНИЕ: для того чтобы восстановить мастер пароль, нужна почта. Сейчас наколько я понимаю
 можно менять без подтверждения, например кода подтверждения и т.д. То есть можно просто напросто взломать
 систему без подтверждения. Поэтому чтобы делать операции например с учетными записями, нужна подтвержденная почта.
 При этом если менять емеил то нужен код подтверждения, а если емил не подтвержден при изменении пароля, то не ребывать код.
 Если почта не подтверждена, то запрет на создание (?!и просмотр учетных записей будет недоступен)
 
-   // валидация мастер пароля
-            'master_password'=>['required','confirmed','min:6','different:password'],
-        ] ,[
-            'master_password.different' => 'Мастер пароль должен отличаться от пароля для входа в аккаунт',
-        ]
 
+!!![] - проработать отношение моделей для основных таблиц: юзеры + коды, юзеры +токены мастер пароля, юзеры + аккаунты
+!!![] - возможно настроить планировщик задач на удаление токенов
 [+] - разобраться с разметкой письма (опубликовал вид письма в resource и испарвил разметку)
 [] - разобраться с требыванием к паролю ( например, требывать пароля с буквами, знаками как и для обычного так и для мастера) или чтобы не совпадал с дургими учетными данными
 [] - разобраться в методах запросов ( согласно rest API )
