КОМИТ  КРАЙНЕГО ЭТАПА ПРОЕКИРОВАНИЯ! В СЛЕДУЮЩИХ ЭТАПАХ КОТРМИТЫ БУДУТ СВЯЗАНЫ С КАКИМИ-ТО ДОРАБОТКАМИ.
Изменена структура таблицы для учетных записей - представлена более структурирвоання версия. Отредактирвоали созданную модель - используется шифрование для паролей, чтобы показать пароль пользователю. Добавлена функция и ротуы создания записи об учётной записи, создана функия редактирвоания учётной записи, удление учтеной записи, функция обновления учетной записи. Добавлен список категорий.
Добавлен защитник котрый проверяет наличие мастер пароля, а также защитник котрый проверяет статус мастер пароль в сессии. Для этой проверки был добавлен маршут, котрый устанавливает статсус мастер пароля в сессии на N время ( можно менять в коде, по умолчанию 2 мин стоит ).
Другие исправления : это скорее плагин котрый редактирует стиль текста (т.к. там скобочик, отступы и т.д.)

	modified:   TODO
	modified:   app/Console/Commands/StatusCode.php
	new file:   app/Enums/AccountType.php
	modified:   app/Http/Controllers/AccountController.php
	modified:   app/Http/Controllers/Auth/AuthenticatedSessionController.php
	modified:   app/Http/Controllers/Auth/EmailVerificationNotificationController.php
	modified:   app/Http/Controllers/Auth/PasswordController.php
	modified:   app/Http/Controllers/Auth/PasswordResetLinkController.php
	modified:   app/Http/Controllers/Auth/RegisteredUserController.php
	modified:   app/Http/Controllers/Auth/VerifyEmailController.php
	renamed:    app/Http/Controllers/MasterPassController.php -> app/Http/Controllers/MasterPasswordController.php
	modified:   app/Http/Controllers/ProfileController.php
	deleted:    app/Http/Controllers/VerificationCodeController.php
	new file:   app/Http/Middleware/CheckMasterPassword.php
	new file:   app/Http/Middleware/InstalledMasterPassword.php
	modified:   app/Http/Responses/CustomLogoutResponseFortify.php
	modified:   app/Models/Account.php
	modified:   app/Models/MasterPasswordToken.php
	modified:   app/Models/User.php
	

--- a/TODO
+++ b/TODO
@@ -42,8 +42,9 @@
             ( например, если повторно отправлять, то перезаписывать коды и оставлять только activate или в дальнейем удалять если нет необходимости)
            ! есть метод CreateOrUpdate
     [+] - првоерка кодов и подтверждение
-[ ] - нужно определить и разработать алгоритм, с помощью какого параметра в сесии можно увидеть каую-либо учетную запись
-[ ] - работа с учетными записями (!!! для конретного аутентифицированного пользователя)
+!!![+] - нужно определить и разработать алгоритм, с помощью какого параметра в сесии можно увидеть каую-либо учетную запись
+    Выбран механизм сессий
+[+] - работа с учетными записями (!!! для конретного аутентифицированного пользователя)
     # [+] - измение патерна регистрации с мастером пароля - неактуально
     [+] - upd: создание матер пароля (разрешить создавать мастер пароль после регистарции и подверждения почты)
     [+] - редактирвоание мастер пароля
@@ -52,13 +53,15 @@
         [+] - создали модель
         [+] - создать функцию генерации ссылки
         [+] - создание функции проверки токена восстанволение пароля
-    [] - добавление учетной записей
-    [] - удаление учетной записей
-    [] - редактирование учетной записей
-    [] - просмотр учетной записи
-    [] - просмотр всех учетных записей
+    [+] - добавление учетной записей
+    [+] - вывод категорий учетных записей
+    [+] - удаление выбранной учетной записей данного пользователя
+    [+] - редактирование выбранной учетной записей данного пользователя
+    [+] - просмотр выбранной учетной записи данного пользователя
+    [+] - просмотр всех учетных записей для авторизированного пользователя
     [] - подвердить с помощью выбранного алгоритма просмотра учетных записей
-    [] - если мастер пароль (то его редактирвоание, и запрет на создание новых учетных записей если его нет)
+    [+] - если мастер пароль (то его редактирвоание, и запрет на создание новых учетных записей если его нет, то запрет)
+           !!! upd: очень важная вещь, оказалась делал записи без него.
 
 
 !ВАЖНОЕ ПРИМЕЧАНИЕ: для того чтобы восстановить мастер пароль, нужна почта. Сейчас наколько я понимаю
@@ -67,9 +70,11 @@
 При этом если менять емеил то нужен код подтверждения, а если емил не подтвержден при изменении пароля, то не ребывать код.
 Если почта не подтверждена, то запрет на создание (?!и просмотр учетных записей будет недоступен)
 
-
+!!! провериь casts по умолчанию - например токены масстер пароля и т.д.
 !!![] - проработать отношение моделей для основных таблиц: юзеры + коды, юзеры +токены мастер пароля, юзеры + аккаунты
 !!![] - возможно настроить планировщик задач на удаление токенов
+[] -посмотреть на формление маршутов (ссылок на роуты)
+[]  - в ошибках возвращать error вместо message
 [+] - разобраться с разметкой письма (опубликовал вид письма в resource и испарвил разметку)
 [] - разобраться с требыванием к паролю ( например, требывать пароля с буквами, знаками как и для обычного так и для мастера) или чтобы не совпадал с дургими учетными данными
 [] - разобраться в методах запросов ( согласно rest API )
@@ -78,3 +83,5 @@
 Для фронта:
 [+] - разобраться с подтверждением почты почему какаято-ссылка ведет
 [] - разрешение куки в браузере для фронта
+[] - генерация пароля
+[] - поиск паролей
