Убраны Hash:make если в бд добавлен атрибуд хэширования данных. Найдена функция, котрая позволяет узнать включена ли 2FA

--- a/TODO
+++ b/TODO
@@ -70,9 +70,17 @@
 При этом если менять емеил то нужен код подтверждения, а если емил не подтвержден при изменении пароля, то не ребывать код.
 Если почта не подтверждена, то запрет на создание (?!и просмотр учетных записей будет недоступен)
 
-!!! провериь casts по умолчанию - например токены масстер пароля и т.д.
+![+] - проверить двухфакторную аутентификацию в виде переменной сесии - т.е получить значение) возможно даже изменить алгоритм аутентификации
+        !!! Решено: для пользователя доступен метод hasEnabledTwoFactorAuthentication(), // он который проверяет наличие включения 2FA
+        [] - изменить восстановление мастер пароля если доступна 2fa
+        [] - изменить восстанволение пароля при двух факторке (например если достпуна 2fa а он позволяет  звходить ?)
+!!! [+] - провериь casts по умолчанию на hash и аккантуы на encrypt - например токены масстер пароля и т.д.
+        [+] - В контролёре ProfileController удалены лишние Hash:make если атрибуты в модели тоже равны hash
+        [+] - В контролере MasterpasswordController удалены лишниее Hash:make
+        [+] - В контролёре AccoutsController удалены лишние Hash:make
+        [+] - В контролере NewPasswordController удалены лишние Hash:make
+        [+] - В контролёре PasswordController удалены лишние Hash:make
 !!![] - проработать отношение моделей для основных таблиц: юзеры + коды, юзеры +токены мастер пароля, юзеры + аккаунты
-!!![] - возможно настроить планировщик задач на удаление токенов
 [] -посмотреть на формление маршутов (ссылок на роуты)
 []  - в ошибках возвращать error вместо message
 [+] - разобраться с разметкой письма (опубликовал вид письма в resource и испарвил разметку)
@@ -80,6 +88,8 @@
 [] - разобраться в методах запросов ( согласно rest API )
 и ответов от сервера и если что подкорректировать их, например ответы на английском языке
 [] - разобраться с кодами ответов в контролерах (например созданный ресур и уже имещийся и т.д.)
+призавершении работы или публикации на хостинге: [] - возможно настроить планировщик задач на удаление токенов
+
 Для фронта:
 [+] - разобраться с подтверждением почты почему какаято-ссылка ведет
 [] - разрешение куки в браузере для фронта
