--- a/TODO
+++ b/TODO
@@ -80,15 +80,18 @@
         [+] - В контролёре AccoutsController удалены лишние Hash:make
         [+] - В контролере NewPasswordController удалены лишние Hash:make
         [+] - В контролёре PasswordController удалены лишние Hash:make
-!!![] - проработать отношение моделей для основных таблиц: юзеры + коды, юзеры +токены мастер пароля, юзеры + аккаунты
-[] -посмотреть на формление маршутов (ссылок на роуты)
-[]  - в ошибках возвращать error вместо message
+!!![+] - проработать отношение моделей для основных таблиц: юзеры + коды, юзеры +токены мастер пароля, юзеры + аккаунты
+[+] -посмотреть на формление маршутов (ссылок на роуты) //оставлю так
+[+]  - в ошибках возвращать error вместо message
 [+] - разобраться с разметкой письма (опубликовал вид письма в resource и испарвил разметку)
 [] - разобраться с требыванием к паролю ( например, требывать пароля с буквами, знаками как и для обычного так и для мастера) или чтобы не совпадал с дургими учетными данными
 [] - разобраться в методах запросов ( согласно rest API )
 и ответов от сервера и если что подкорректировать их, например ответы на английском языке
 [] - разобраться с кодами ответов в контролерах (например созданный ресур и уже имещийся и т.д.)
-призавершении работы или публикации на хостинге: [] - возможно настроить планировщик задач на удаление токенов
+
+призавершении работы или публикации на хостинге:
+[] - возможно настроить планировщик задач на удаление токенов для воостановления мастер пароля и кодов
++ посмотретьвремя работы ссылок, кодов
 
 Для фронта:
 [+] - разобраться с подтверждением почты почему какаято-ссылка ведет
