Установлены требывания к паролю при регистрации ,его сбросе, а также и для создания мастер пароля и для обновления и для его сброса

--- a/TODO
+++ b/TODO
@@ -84,12 +84,12 @@
 [+] -посмотреть на формление маршутов (ссылок на роуты) //оставлю так
 [+]  - в ошибках возвращать error вместо message
 [+] - разобраться с разметкой письма (опубликовал вид письма в resource и испарвил разметку)
-[] - разобраться с требыванием к паролю ( например, требывать пароля с буквами, знаками как и для обычного так и для мастера) или чтобы не совпадал с дургими учетными данными
+[+] - разобраться с требыванием к паролю ( например, требывать пароля с буквами, знаками как и для обычного так и для мастера) или чтобы не совпадал с дургими учетными данными
 [] - разобраться в методах запросов ( согласно rest API )
 и ответов от сервера и если что подкорректировать их, например ответы на английском языке
 [] - разобраться с кодами ответов в контролерах (например созданный ресур и уже имещийся и т.д.)
 
-призавершении работы или публикации на хостинге:
+при завершении работы или публикации на хостинге:
 [] - возможно настроить планировщик задач на удаление токенов для воостановления мастер пароля и кодов
 + посмотретьвремя работы ссылок, кодов
 
