Изменил систему сброса мастер пароля с включённой 2FA ( теперь нужен будет код подтверждения 2FA)

--- a/TODO
+++ b/TODO
@@ -62,7 +62,9 @@
     [] - подвердить с помощью выбранного алгоритма просмотра учетных записей
     [+] - если мастер пароль (то его редактирвоание, и запрет на создание новых учетных записей если его нет, то запрет)
            !!! upd: очень важная вещь, оказалась делал записи без него.
-
+[+] - изменить систему сброса мастер если включена 2fa
+[] - изменить выключение 2fa ?
+[] - проверить параметры котрыйе пердеются в запросе вида {id}
 
 !ВАЖНОЕ ПРИМЕЧАНИЕ: для того чтобы восстановить мастер пароль, нужна почта. Сейчас наколько я понимаю
 можно менять без подтверждения, например кода подтверждения и т.д. То есть можно просто напросто взломать
@@ -85,16 +87,22 @@
 [+]  - в ошибках возвращать error вместо message
 [+] - разобраться с разметкой письма (опубликовал вид письма в resource и испарвил разметку)
 [+] - разобраться с требыванием к паролю ( например, требывать пароля с буквами, знаками как и для обычного так и для мастера) или чтобы не совпадал с дургими учетными данными
-[] - разобраться в методах запросов ( согласно rest API )
+[+] - разобраться в методах запросов ( согласно rest API )
 и ответов от сервера и если что подкорректировать их, например ответы на английском языке
-[] - разобраться с кодами ответов в контролерах (например созданный ресур и уже имещийся и т.д.)
+get - получение, post- отправка, put - обновление, patch- частичное обновление, delete - удаление
+Конечное форматирвоание на русский будет при проектирвоании клиента
+[+] - разобраться с кодами ответов в контролерах (например созданный ресур и уже имещийся и т.д.)
+    401 - не авторизован, 422 неправильные данные, 403-запрещено, 404 - не найдено, 500 - ошибка сервера, 419 - csfr токен устарел
+    200 - ок , 201 - создано, 204 - no content
 
 при завершении работы или публикации на хостинге:
 [] - возможно настроить планировщик задач на удаление токенов для воостановления мастер пароля и кодов
-+ посмотретьвремя работы ссылок, кодов
++ посмотреть время работы ссылок, кодов
+
+
 
 Для фронта:
 [+] - разобраться с подтверждением почты почему какаято-ссылка ведет
 [] - разрешение куки в браузере для фронта
 [] - генерация пароля
-[] - поиск паролей
+[] - поиск учётной
