Изменили восстановление мастер-пароля если доступна 2FA Изменил алгоритм отключения 2FA подтверждением пароля и кода с почты. (Для этого создал , модель и новый контролер, установил связи, создал шаблон ( оказывается можно быо через html создать уведомления, но уже поздно) , добавили маршуты)
	modified:   TODO
	modified:   app/Http/Controllers/Auth/RegisteredUserController.php
	new file:   app/Http/Controllers/CustomTwoFactorAuthenticationController.php
	new file:   app/Mail/TwoFactorDisabledCode.php
	new file:   app/Models/TwoFactorConfirmationDisabledCode.php
	modified:   app/Models/User.php
	modified:   composer.json
	modified:   composer.lock
	new file:   database/migrations/2024_05_25_171657_create_two_factor_confirmation_disabled_codes_table.php
	new file:   resources/views/emails/confirmation_code.blade.php
	modified:   routes/api.php

--- a/TODO
+++ b/TODO
@@ -74,8 +74,8 @@
 
 ![+] - проверить двухфакторную аутентификацию в виде переменной сесии - т.е получить значение) возможно даже изменить алгоритм аутентификации
         !!! Решено: для пользователя доступен метод hasEnabledTwoFactorAuthentication(), // он который проверяет наличие включения 2FA
-        [] - изменить восстановление мастер пароля если доступна 2fa
-        [] - изменить восстанволение пароля при двух факторке (например если достпуна 2fa а он позволяет  звходить ?)
+        [+] - изменить восстановление мастер пароля если доступна 2fa
+        [+] - изменить восстанволение пароля при двух факторке (например если достпуна 2fa а он позволяет  звходить ?)
 !!! [+] - провериь casts по умолчанию на hash и аккантуы на encrypt - например токены масстер пароля и т.д.
         [+] - В контролёре ProfileController удалены лишние Hash:make если атрибуты в модели тоже равны hash
         [+] - В контролере MasterpasswordController удалены лишниее Hash:make
